--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
+alembic==1.4.3
 astroid==2.4.2
 autopep8==1.5.4
 click==7.1.2
 colorama==0.4.3
 Flask==1.1.2
+Flask-Migrate==2.5.3
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
 gunicorn==20.0.4
 isort==5.5.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+Mako==1.1.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 Pillow==8.0.0
+psycopg2==2.8.6
 pycodestyle==2.6.0
 pylint==2.6.0
+python-dateutil==2.8.1
+python-editor==1.0.4
 six==1.15.0
 SQLAlchemy==1.3.19
 toml==0.10.1
