--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,93 @@
-alembic==1.4.3
-astroid==2.4.2
-autopep8==1.5.4
-click==7.1.2
+altgraph==0.16.1
+attrs==19.3.0
+autopep8==1.5.2
+backcall==0.1.0
+bleach==3.1.4
+certifi==2020.6.20
+chardet==3.0.4
+Click==7.0
 colorama==0.4.3
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
 Flask==1.1.2
-Flask-Migrate==2.5.3
-Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
-gunicorn==20.0.4
-isort==5.5.3
+fpdf==1.7.2
+future==0.18.2
+idna==2.10
+ipykernel==5.2.1
+ipython==7.13.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
 itsdangerous==1.1.0
+jedi==0.17.0
 Jinja2==2.11.2
-lazy-object-proxy==1.4.3
-Mako==1.1.3
+joblib==0.16.0
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.3
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+kiwisolver==1.2.0
 MarkupSafe==1.1.1
-mccabe==0.6.1
-Pillow==8.0.0
+matplotlib==3.3.2
+mistune==0.8.4
+mutagen==1.44.0
+nbconvert==5.6.1
+nbformat==5.0.5
+nltk==3.5
+notebook==6.0.3
+numpy==1.18.1
+oauthlib==3.1.0
+pandocfilters==1.4.2
+parso==0.7.0
+pathtools==0.1.2
+pefile==2019.4.18
+pickleshare==0.7.5
+Pillow==6.2.1
+prettyprint==0.1.5
+prettytable==0.7.2
+prometheus-client==0.7.1
+prompt-toolkit==3.0.5
 psycopg2==2.8.6
 pycodestyle==2.6.0
-pylint==2.6.0
+pygame==1.9.6
+Pygments==2.6.1
+pyinstaller @ https://github.com/pyinstaller/pyinstaller/archive/develop.tar.gz
+pyparsing==2.4.7
+pyperclip==1.8.0
+PyQt5==5.13.2
+PyQt5-sip==12.7.1
+pyqt5-tools==5.13.2.1.6rc1
+pyrsistent==0.16.0
+PySocks==1.7.1
 python-dateutil==2.8.1
-python-editor==1.0.4
-six==1.15.0
+python-dotenv==0.11.0
+pywin32==227
+pywin32-ctypes==0.2.0
+pywinpty==0.5.7
+pyzmq==19.0.0
+qtconsole==4.7.2
+QtPy==1.9.0
+regex==2020.7.14
+requests==2.24.0
+requests-oauthlib==1.3.0
+selenium==3.141.0
+Send2Trash==1.5.0
+six==1.14.0
 SQLAlchemy==1.3.19
-toml==0.10.1
+terminado==0.8.3
+testpath==0.4.4
+textblob==0.15.3
+tornado==6.0.4
+tqdm==4.49.0
+traitlets==4.3.3
+tweepy==3.9.0
+urllib3==1.25.9
+virtualenv==16.7.7
+watchdog==0.10.2
+wcwidth==0.1.9
+webencodings==0.5.1
 Werkzeug==1.0.1
-wrapt==1.12.1
+widgetsnbextension==3.5.1
